# fomo-sdk

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  README  README.md  all_topics.txt  audio_utils.py  create_venv.sh  extract.sh  multiple_extract.sh  pyproject.toml  radar_lidar_cali.py  radar_lidar_cali_utils.py  release-please-config.json  release-please-manifest.json  requirements.txt  ros2IJRR_conversion.py  utils.py
.github/workflows/: fomo-rust-docker.yml  lint.yml  release-please.yml
QR_code_time_sync/: QR_code_generator.py  QR_code_generator_fast.py  QR_code_generator_simplified.py  read_QR_code_from_rosbags_and_evaluate.py  read_QR_code_single.py
QR_code_time_sync/camera-latency1/: metadata.yaml
calib/: T_aeva_robot
data/calib_to_ijrr/: basler.json  zedx_SN41705768.conf
examples/: audio_example.ipynb  evaluation_example.ipynb  image_example.ipynb  lidar_example.ipynb  radar_example.ipynb
examples/data/: lidar.csv  yellow_2024-11-21-14-26_yellow_2024-11-21-14-26.txt  yellow_2024-11-21-14-26_yellow_2025-01-29-16-08.txt  yellow_2025-01-29-16-08_yellow_2024-11-21-14-26.txt  yellow_2025-01-29-16-08_yellow_2025-01-29-16-08.txt
extract_gps/: novatel_bag_to_log.py
extract_pointclouds/: extract.py
extrinics_visualization/: find_closest_ts.py  lidar_to_rgb_video.py  subimage1.py  subimage1_and_2.py  subimage2.py  subimage3.py  subimage3_camera_perspective.py  transform.json  transform_utils.py  vis.py
fomo_rust/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  invert.py
fomo_rust/.cargo/: config.toml
fomo_rust/benches/: bench_write_ijrr.rs  bench_write_mcap.rs
fomo_rust/src/: fomo_rust_sdk.rs  lib.rs
fomo_rust/src/fomo_rust_sdk/: cli_common.rs  data_writer.rs  io.rs  metadata.rs  qos.rs  rosbag.rs  utils.rs
fomo_rust/src/fomo_rust_sdk/calib/: mod.rs
fomo_rust/src/fomo_rust_sdk/sensors/: audio.rs  basic.rs  common.rs  header.rs  image.rs  imu.rs  mod.rs  odom.rs  point_cloud.rs  radar.rs  stereo.rs  tf.rs  timestamp.rs  utils.rs
fomo_sdk/: __init__.py
fomo_sdk/audio/: utils.py
fomo_sdk/common/: file_utils.py  fomo_mcap_writer.py  naming.py  utils.py
fomo_sdk/drone/: README.md  obj-mtl-importer.py
fomo_sdk/evaluation/: evaluate_tum_files.py  io.py  trajectories.py  utils.py  visualization.py
fomo_sdk/gnss_analysis/: GNSS_ground_truth_generation.py  emlid_gnss_to_rosbag.py  filter_rinex_timestamp.py  postprocess.py
fomo_sdk/ground_truth/: add_ground_truth_trajectory.py  emlid_rs+_tf.csv  emlid_tf.csv  gnss_tf.csv  gnss_tf_old.csv  paper_figures.py  (+7 more)
radar_conversion/: warthog_to_boreas.py
radar_lidar_calibration/: radar_lidar_cali.json  radar_lidar_cali.py  radar_lidar_cali_utils.py
tf_trees/: T_radar_robot
unit_tests/: compare_lidar_bins.py  se3_offset.py  verify_lidar_log.txt
(+65 files in other folders)
